Fix Note action button font-size too small

--- a/ui/src/components/Note.scss
+++ b/ui/src/components/Note.scss
@@ -42,7 +42,7 @@
   left: 1rem;
 
   // Badge style
-  height: 1.5rem;
+  height: 1.8rem;
   min-width: 3rem;
   text-align: center;
   color: $whiteColor;
